[package]
name = "forex-cli"
version = "0.2.0"
edition.workspace = true
# SPDX dual-license matches the repo-root LICENSE file. Required by both
# cargo-deb (writes Debian `control` License:) and cargo-generate-rpm.
license = "MIT OR Apache-2.0"
description = "forex-ai headless CLI + TUI — quantitative trading workspace for the cTrader Open API."
homepage = "https://github.com/kosred/forex-ai"
repository = "https://github.com/kosred/forex-ai"
readme = "../../README.md"

[features]
default = []
gpu = ["forex-search/gpu", "forex-models/neuro-evolution-gpu", "forex-models/statistical-gpu"]

[dependencies]
forex-core = { path = "../forex-core" }
forex-data = { path = "../forex-data" }
forex-models = { path = "../forex-models", features = ["tree-models", "pure-rust-ml"] }
forex-search = { path = "../forex-search" }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Interactive TUI — used by `forex-cli` when invoked with no args.
# `crossterm` is the cross-platform terminal backend; `ratatui` is the
# rendering library. Together they give us Bloomberg-style fixed
# layouts with live progress + keyboard nav.
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
unicode-width = "0.2"
