[package]
name = "forex-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
config = "0.15.19"
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
tokio = { version = "1.49.0", features = ["full"] }
sysinfo = "0.37.2"
colored = "3.0.0"
anyhow = "1.0.100"
thiserror = "2.0.16"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
nvml-wrapper = { version = "0.11.0", optional = true }
ndarray = "0.17.2"
nalgebra = "0.33.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-native-roots", "json", "blocking"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
