[package]
name = "forex-core"
version = "0.4.19"
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
config = "0.15.19"
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
tokio = { version = "1.49.0", features = ["full"] }
sysinfo = "0.37.2"
colored = "3.0.0"
anyhow = "1.0.100"
thiserror = "2.0.16"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
nvml-wrapper = { version = "0.11.0", optional = true }
ndarray = "0.17.2"
nalgebra = "0.33.0"
# reqwest >= 0.13.3 logs only the host, not the full URL — protects client_secret from leaking to debug/trace logs.
# In 0.13, `form`/`query` are opt-in features (per the 0.13.0 CHANGELOG).
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "blocking", "query", "form"] }
# API key wrapped in `secrecy::SecretString` (a `Box<str>` that cannot
# reallocate, zeroized on drop). The zeroize upstream docs explicitly point
# users to `secrecy` for string-shaped secrets because `Zeroizing<String>`
# leaves un-zeroed reallocated buffers on the heap.
secrecy = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

