[package]
name = "forex-data"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
polars = { version = "0.52.0", features = ["lazy", "dtype-full", "temporal", "timezones", "parquet"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
vector-ta = { version = "0.2.4" }
memmap2 = "0.9.5"
futures = "0.3"
vortex-array = "0.67.0"
vortex-buffer = { version = "0.67.0", features = ["memmap2"] }
vortex-file = "0.67.0"
vortex-io = "0.67.0"
vortex-layout = "0.67.0"
vortex-session = "0.67.0"
