[package]
name = "forex-data"
version = "0.4.17"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
forex-core = { path = "../forex-core" }
csv = "1.3"
polars = { version = "0.52.0", features = ["lazy", "dtype-full", "temporal", "timezones", "parquet", "ipc"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
vector-ta = { version = "0.2.4" }
memmap2 = "0.9.5"
futures = "0.3"
# Recursive filesystem walk used by core::discover. Latest stable
# (verified on crates.io 2026-05-14): 2.5.0.
walkdir = "2.5"
vortex-array = "0.67.0"
vortex-buffer = { version = "0.67.0", features = ["memmap2"] }
vortex-file = "0.67.0"
vortex-io = "0.67.0"
vortex-layout = "0.67.0"
vortex-session = "0.67.0"

