[package]
name = "forex-gemma"
version = "0.4.15"
edition.workspace = true
description = "Local on-device LLM helper for the forex-ai trading bot — ensemble expert + conversational suggester."
license = "LicenseRef-Proprietary"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
forex-core = { path = "../forex-core" }
regex = "1.11"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
# G1 milestone: real mistral.rs runtime. Stub runtime is always
# available so the rest of the workspace compiles even when the
# real backend is not wired in.
mistralrs-runtime = []

