[package]
name = "forex-models"
version = "0.1.0"
edition = "2021"

[dependencies]
forex-data = { path = "../forex-data" }
ndarray = { version = "0.17.2", features = ["rayon", "serde"] }
tch = { version = "0.22.0", optional = true }
ort = { version = "2.0.0-rc.10", optional = true, features = ["cuda", "copy-dylibs"] }
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
tracing = "0.1.42"
anyhow = "1.0.100"
thiserror = "2.0.16"

# Tree model dependencies
polars = { version = "0.52.0", features = ["lazy", "dtype-datetime", "rolling_window", "timezones"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Tree model FFI bindings
lightgbm3 = { version = "1.0.8", optional = true }
xgb = { version = "3.0.5", optional = true }
catboost-rust = { version = "0.3.6", optional = true, features = ["gpu"] }

# Burn framework — use autodiff only (no train/dataset to avoid rusqlite conflict)
# burn-nn is always included in burn-core, no extra dep needed
burn = { version = "0.20", optional = true, default-features = false, features = ["autodiff", "std"] }
burn-ndarray = { version = "0.20", optional = true, default-features = false, features = ["std"] }

num_cpus = "1.17.0"
rand = "0.9.2"
rayon = "1.11.0"
chrono = "0.4.42"
lazy_static = "1.5.0"

[features]
default = []
onnx = ["dep:ort"]
tch = ["dep:tch"]
lightgbm = ["dep:lightgbm3"]
lightgbm-gpu = ["lightgbm", "lightgbm3/gpu", "lightgbm3/cuda"]
xgboost = ["dep:xgb"]
catboost = ["dep:catboost-rust"]
tree-models-core = ["lightgbm", "xgboost"]
tree-models = ["tree-models-core", "catboost"]

# Burn pure-Rust deep learning (production backend)
burn-backend = ["dep:burn", "dep:burn-ndarray"]
