[package]
name = "forex-news"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.41"
forex-core = { path = "../forex-core" }
