[package]
name = "forex-search"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
cubecl = { version = "0.9.0", optional = true, default-features = false, features = ["std", "cuda"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
half = { version = "2.5", optional = true, default-features = false, features = ["alloc", "num-traits"] }
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = { version = "0.5.1", optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.18.0"
tracing = "0.1.41"
forex-data = { path = "../forex-data" }
forex-core = { path = "../forex-core" }
duckdb = { version = "1.1.1", optional = true, features = ["bundled"] }
tch = { version = "0.22.0", optional = true }

[features]
default = []
gpu = ["dep:rand_distr", "dep:tch", "dep:cubecl", "dep:half"]
strategy-db = ["dep:duckdb"]
