[package]
name = "forex-search"
version = "0.4.19"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
cubecl = { version = "0.9.0", optional = true, default-features = false, features = ["std", "cuda"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
half = { version = "2.5", optional = true, default-features = false, features = ["alloc", "num-traits"] }
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = { version = "0.5.1", optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.18.0"
tracing = "0.1.41"
forex-data = { path = "../forex-data" }
forex-core = { path = "../forex-core" }
duckdb = { version = "1.1.1", optional = true, features = ["bundled"] }
tch = { version = "0.22.0", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
# `gpu`: pulls in the GPU dep chain (libtorch via tch, CUDA via cubecl)
# but uses the CPU-fallback discovery path. The cubecl/tch kernel
# modules in this crate target older API versions and need migration
# before they compile against the pinned cubecl 0.9 / tch 0.22 versions
# (see docs/audits/gpu_migration_2026-05-11.md).
gpu = ["dep:rand_distr", "dep:tch", "dep:cubecl", "dep:half", "dep:libc"]
# `gpu-experimental`: opt-in for migrators working on the kernel
# modules. Will not compile until the migration lands. Implies `gpu`.
gpu-experimental = ["gpu"]
strategy-db = ["dep:duckdb"]

