[package]
name = "mt5-bridge"
version = "0.1.0"
edition.workspace = true

[dependencies]
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
forex-core = { path = "../forex-core" }
