[package]
name = "neoethos-app"
version = "0.4.20"
edition.workspace = true
# SPDX dual-license matches the repo-root LICENSE file. Required by both
# cargo-deb (which prefers `license` over `license-file` when generating
# `debian/control`) and cargo-generate-rpm. Standard Rust ecosystem choice.
license = "LicenseRef-Proprietary"
description = "neoethos backend server for FX strategy research and risk-aware execution."
homepage = "https://github.com/kosred/neoethos"
repository = "https://github.com/kosred/neoethos"
readme = "../../README.md"

[features]
default = []
gpu = ["neoethos-search/gpu", "neoethos-models/neuro-evolution-gpu", "neoethos-models/statistical-gpu"]
native-tree-models = ["neoethos-models/tree-models"]
# Enable the native Protobuf-over-TCP transport (port 5035) for the cTrader
# Open API. Wire-format only; the higher-level Rust API surface is unchanged.
# v0.4.5 migration scope: reconcile (ProtoOAReconcileReq/Res) +
# historical-bars (ProtoOAGetTrendbarsReq/Res). All other endpoints fall
# back to the default JSON-WSS path. See
# `docs/audits/research/ctrader_api_full_reference.md` §10 item #3 for
# the bandwidth + JSON field-name-drift rationale (~3× saving).
# Runtime opt-in is via `FOREX_BOT_CTRADER_TRANSPORT=protobuf` plus this
# feature being enabled at build time.
ctrader-protobuf-streaming = ["dep:webpki-roots"]
# G1 LLM backend - wire the real llama.cpp runtime into server-side intelligence.
# Requires cmake + a C/C++ compiler and a ~5 GB GGUF on disk.
# Download the GGUF via: `powershell -File scripts/fetch-gemma-model.ps1`
# The feature is OFF by default so the app builds cleanly without them.
gemma-backend = ["neoethos-gemma/mistralrs-runtime"]

[dependencies]
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.100"
chrono = "0.4"
# keyring 3.6.3 — backend is OPT-IN per platform feature flag. Without these
# features the crate falls back to an in-memory MockCredential that does not
# persist anything (verified 2026-05-20 via --api-test on Windows: tokens
# were saved to a mock store, then "lost" on the next process start, which
# cascaded into "No saved cTrader session" + every downstream button reading
# "UNAVAILABLE"). The fix is target-conditional so we never pull macOS-only
# `security-framework` or Linux-only `linux-keyutils` into the wrong build.
open = "5.3.2"
# reqwest >= 0.13.3 logs only the host, not the full URL — protects client_secret from leaking to debug/trace logs.
# In 0.13, `form`/`query` are opt-in features (per the 0.13.0 CHANGELOG).
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.20"
dirs = "5.0.1"
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
futures = "0.3.31"
protobuf = "4.31.1-release"
rand = { workspace = true }
base64 = "0.22"
# audit-fix F8: SecretString is the safe wrapper for string-shaped
# secrets — see neoethos-core/Cargo.toml for the rationale.
secrecy = "0.10"
# rustls is already pulled in transitively by reqwest / tungstenite.
# Keep a direct edge so cTrader code can install the process-level
# CryptoProvider before tungstenite builds a ClientConfig; without this,
# the mixed reqwest/object_store feature graph can enable both ring and
# aws-lc-rs and rustls 0.23 panics at runtime. webpki-roots stays gated
# behind the native Protobuf-over-TCP transport.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = { version = "0.26", optional = true }

# ── Flutter migration (Phase 1) ─────────────────────────────────────────────
# axum is the HTTP layer the Flutter front-end talks to. Latest stable 0.8.x
# as of 2026-05; uses the same tokio runtime the rest of the app uses, so no
# extra reactor. `tower-http` provides ready-made middleware — we use `cors`
# (Flutter is a separate process, same machine, but the browser preflight
# rules still kick in when running flutter run -d chrome for debugging) and
# `trace` (request/response logs piped through our existing tracing setup).
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
# CPU / RAM probe for the `/hardware` HTTP endpoint. Same version
# neoethos-core already pulls in transitively so the workspace
# resolves to a single sysinfo build.
sysinfo = "0.37.2"



polars = { version = "0.52.0", features = ["lazy", "dtype-full", "temporal", "timezones"] }

# Our internal core engines
neoethos-core = { path = "../neoethos-core" }
neoethos-data = { path = "../neoethos-data" }
neoethos-search = { path = "../neoethos-search" }
neoethos-models = { path = "../neoethos-models", default-features = false, features = ["pure-rust-ml"] }
# v0.4.8: on-device LLM helper (Gemma). The stub runtime is always
# available so the backend binary builds without a GGUF file on disk;
# `mistralrs-runtime` feature lights up the real inference path.
neoethos-gemma = { path = "../neoethos-gemma" }
ndarray = "0.17.2"
clap = { version = "4.6.0", features = ["derive"] }
num_cpus = "1.17.0"
# Native folder-picker for the "Browse..." button on the data-bootstrap
# page. Resolved per-target — see the `cfg()` blocks at the bottom of
# this file (each platform gets the minimum feature set it needs, so
# a Linux build never pulls libgtk-3-dev and a Windows build never
# pulls the GTK glue).
# Risk-state signatures use SHA-256. RustCrypto `sha2` is the canonical
# pure-Rust implementation; `hex` is the minimal lowercase-hex encoder.
sha2 = "0.10"
hex = "0.4"
# Bounded multi-producer/multi-consumer channel used to bridge the
# cTrader streaming worker thread and server-side broker-control sinks.
# Crossbeam (vs. `std::sync::mpsc`) gives us a `Sender` that is
# `Send + Sync + Clone` without a `Mutex` wrapper, which is what the
# `OnceLock`-backed global broker-control sink in `broker_control.rs`
# needs so the streaming worker can write without contending on a mutex.
# Version 0.5.15 matches the transitive resolution already present in
# `Cargo.lock` - no version drift.
crossbeam-channel = "0.5.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

# keyring per-platform backend — see comment next to the original `keyring = ...`
# pin removal above. Each feature is the minimum needed to bind to the OS
# secret store: Credential Manager (Windows), Keychain (macOS), Secret
# Service + kernel keyutils (Linux). `default-features = false` keeps the
# mock/sample store out of the binary so a misconfigured platform fails
# loudly instead of silently dropping tokens.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
# Modern Win32 file dialog (uses the v6 common controls comctl32.dll
# that ships with every Windows ≥ Vista — no extra runtime needed).
rfd = { version = "0.17", default-features = false, features = ["common-controls-v6"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
# macOS uses the AppKit NSOpenPanel — no extra features needed.
rfd = { version = "0.17", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native-sync-persistent"] }
# Drop GTK3 — talks to xdg-desktop-portal over D-Bus instead. Works on
# GNOME / KDE / WSL2g without `libgtk-3-dev` installed; falls back
# cleanly when the portal isn't available (the picker just doesn't
# open.
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
cc = "1.2.14"


[package.metadata.packager]
product_name = "neoethos"
identifier = "com.neoethos.app"
authors = ["Konstantinos Red"]
description = "neoethos - a disciplined multi-model ML engine for FX strategy research and risk-aware execution."
formats = ["nsis"]
# Paths are resolved relative to this Cargo.toml. The default GUI build
# intentionally ships without native tree-model DLLs; those are gated behind
# the `native-tree-models` feature so a clean Windows install is not blocked by
# Visual C++ debug/runtime DLLs at process startup.
#
# VC++ Redistributable note: the Rust MSVC binaries depend on
# VCRUNTIME140.dll (Visual C++ 2015-2022 redistributable). Every
# Windows 10/11 install that has ever run Office/Chrome/Steam/etc.
# already has it, but a *pristine* install does not. The NSIS template
# below adds a pre-install check that downloads + silently installs
# the Microsoft-signed VC_redist.x64.exe from microsoft.com if the
# DLLs aren't already on PATH. See `installer_no_paid_certs_strategy.md`
# §4 for the bootstrapper hash + signature verification details.
resources = [
    "../../config.yaml",
    "../../LICENSE",
    "../../README.md",
    # v0.4.10: ship the Gemma GGUF fetcher next to the .exe so the
    # The Flutter shell can spawn
    # it without the operator having to clone the repo. The script
    # itself does the HuggingFace download + disk-safety check +
    # writes to the canonical user-data dir.
    "../../scripts/fetch-gemma-model.ps1",
]
# NSIS hook: emit the VC++ Redistributable bootstrapper into the
# generated installer. cargo-packager's `nsis` backend accepts custom
# hook templates — the snippet below is the smallest one that:
#   1. Checks `HKLM\SOFTWARE\Microsoft\VisualStudio\14.0\VC\Runtimes\x64`
#      for `Installed = 1`.
#   2. If missing, downloads the Microsoft-signed VC_redist.x64.exe
#      and runs it with `/install /quiet /norestart`.
# Path is relative to this Cargo.toml.
nsis.installer-hooks = "../../scripts/vc_redist_install.nsh"

[[package.metadata.packager.binaries]]
path = "neoethos-app"
main = true

# ──────────────────────────────────────────────────────────────────────────────
# cargo-deb metadata — produces target/debian/neoethos-app_<version>_<arch>.deb
# Spec: https://github.com/kornelski/cargo-deb
# Strategy ref: installer_no_paid_certs_strategy.md §3 (Linux .deb path, $0).
# ──────────────────────────────────────────────────────────────────────────────
[package.metadata.deb]
maintainer = "neoethos contributors <neoethos@users.noreply.github.com>"
# SPDX expression mirrored from `package.license` above. cargo-deb writes this
# into the Debian `control` file's `License:` line via the license-file route.
copyright = "2024-2026, neoethos contributors; proprietary; all rights reserved"
license-file = ["../../LICENSE", "0"]
extended-description = """\
neoethos is an open-source quantitative trading workspace targeting \
the cTrader Open API. It includes data ingestion, ML-driven \
strategy search, paper / live trading orchestration, and a \
risk-aware execution gate."""
section = "finance"
priority = "optional"
assets = [
    ["target/release/neoethos-app", "usr/bin/", "755"],
    ["../../assets/symbol_metadata/defaults.json", "usr/share/neoethos/symbol_metadata/", "644"],
    ["../../LICENSE", "usr/share/doc/neoethos/", "644"],
    ["../../README.md", "usr/share/doc/neoethos/", "644"],
]
# Opt-in autostart only. Never enable the unit on install.
systemd-units = { enable = false }

# ──────────────────────────────────────────────────────────────────────────────
# cargo-generate-rpm metadata — produces target/generate-rpm/neoethos-app-*.rpm
# Spec: https://github.com/cat-in-136/cargo-generate-rpm
# ──────────────────────────────────────────────────────────────────────────────
[package.metadata.generate-rpm]
name = "neoethos"
# Mirrors the SPDX expression in `package.license`.
license = "LicenseRef-Proprietary"
assets = [
    { source = "target/release/neoethos-app", dest = "/usr/bin/neoethos-app", mode = "0755" },
    { source = "assets/symbol_metadata/defaults.json", dest = "/usr/share/neoethos/symbol_metadata/defaults.json", mode = "0644" },
    { source = "LICENSE", dest = "/usr/share/doc/neoethos/LICENSE", mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/neoethos/README.md", mode = "0644" },
]
